# graphclaw

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  jac.toml  pyproject.toml
graphclaw/: __init__.py  dashboard.cl.jac  dashboard.css  dashboard.jac  dashboard.py  dashboard_data.py  dashboard_runtime.py  dashboard_server.py  main.jac  setup_runtime.py  update_manager.py
graphclaw/agents/: __init__.py  base.jac  base.py  builder.jac  builder.py  coordinator.jac  coordinator_runtime.py  devops.jac  devops.py  planner.jac  planner.py  researcher.jac  researcher.py
graphclaw/browser/: __init__.py  automation.py
graphclaw/channels/: __init__.py  auth.py  bus.jac  bus.py  discord.jac  discord.py  email.jac  email.py  slack.jac  slack.py  telegram.jac  telegram.py  whatsapp.jac  whatsapp.py
graphclaw/config/: __init__.py  loader.jac  loader.py  schema.jac  schema.py
graphclaw/credentials/: __init__.py  platform_auth.py
graphclaw/dashboard_app/: app.cl.jac  dashboard.css  graph_helpers.js  jac.toml  main.cl.jac  main.jac
graphclaw/mcp/: __init__.py  platforms.py  runtime.py  tooling.py
graphclaw/memory/: __init__.py  backend.py  consolidate.jac  dream.jac  nodes.jac  recall.jac  store.jac
graphclaw/providers/: __init__.py  base.jac  base.py  registry.jac  registry.py
graphclaw/skills/: __init__.py  approval.py  loader.jac  loader.py  selector.jac  tooling.py
graphclaw/skills/registry/base44/: skill.json  skill.py
graphclaw/skills/registry/loveable/: skill.json  skill.py
graphclaw/tools/: __init__.py  filesystem.jac  filesystem.py  platform_builders.py  shell.jac  shell.py  web.jac  web.py
tests/: test_dashboard_data_and_bootstrap.py  test_dashboard_runtime.py  test_install_dependencies.py  test_openclaw_channel_auth.py  test_terminal_capability.py
