[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphclaw"
version = "0.1.0"
description = "Graph-native multi-agent AI platform"
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.7.0",          # jaclang + byllm + jac-mcp + jac-scale
    # Channels
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "slack-bolt>=1.21.0",
    "aiosmtplib>=3.0.0",
    "aiohttp>=3.10.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
graphclaw = "graphclaw._cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["graphclaw"]
