[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphclaw"
version = "0.1.0"
description = "Graph-native multi-agent AI platform"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jaclang>=0.13.5,<0.14",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.10.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
channels = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "slack-bolt>=1.21.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["graphclaw"]
